--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -78,7 +78,7 @@ collections:
             - label: "Main"
               name: "main"
               widget: "object"
-              fields: 
+              fields:
                 - {label: "Name", name: "name", widget: "select", options: ["Tanks"], default: ["Tanks"]}
                 - {label: "Parent", name: "parent", widget: "select", options: ["jobs"], default: ["jobs"]}
         - label: "Role"
@@ -103,7 +103,7 @@ collections:
             - label: "Main"
               name: "main"
               widget: "object"
-              fields: 
+              fields:
                 - {label: "Name", name: "name", widget: "select", options: ["Healers"], default: ["Healers"]}
                 - {label: "Parent", name: "parent", widget: "select", options: ["jobs"], default: ["jobs"]}
         - label: "Role"
@@ -128,7 +128,7 @@ collections:
             - label: "Main"
               name: "main"
               widget: "object"
-              fields: 
+              fields:
                 - {label: "Name", name: "name", widget: "select", options: ["Melee"], default: ["Melee"]}
                 - {label: "Parent", name: "parent", widget: "select", options: ["jobs"], default: ["jobs"]}
         - label: "Role"
@@ -153,7 +153,7 @@ collections:
             - label: "Main"
               name: "main"
               widget: "object"
-              fields: 
+              fields:
                 - {label: "Name", name: "name", widget: "select", options: ["Ranged"], default: ["Ranged"]}
                 - {label: "Parent", name: "parent", widget: "select", options: ["jobs"], default: ["jobs"]}
         - label: "Role"
@@ -178,7 +178,7 @@ collections:
             - label: "Main"
               name: "main"
               widget: "object"
-              fields: 
+              fields:
                 - {label: "Name", name: "name", widget: "select", options: ["Casters"], default: ["Casters"]}
                 - {label: "Parent", name: "parent", widget: "select", options: ["jobs"], default: ["jobs"]}
         - label: "Role"
@@ -219,6 +219,16 @@ collections:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Job Name", name: "job_name", widget: "select", options: ["warrior"], default: ["warrior"]}
+          - label: "Menu hierarchy"
+            name: "menu"
+            widget: "object"
+            fields:
+              - label: "Main"
+                name: "main"
+                widget: "object"
+                fields:
+                  - {label: "Name", name: "name", widget: "select", options: ["Warrior"], default: ["Warrior"]}
+                  - {label: "Parent", name: "parent", widget: "select", options: ["tanks"], default: ["tanks"]}
       - label: "Leveling Guide"
         name: "leveling-guide"
         file: "content/jobs/tanks/warrior/leveling-guide.md"
@@ -470,6 +480,16 @@ collections:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Job Name", name: "job_name", widget: "select", options: ["paladin"], default: ["paladin"]}
+          - label: "Menu hierarchy"
+            name: "menu"
+            widget: "object"
+            fields:
+              - label: "Main"
+                name: "main"
+                widget: "object"
+                fields:
+                  - {label: "Name", name: "name", widget: "select", options: ["Paladin"], default: ["Paladin"]}
+                  - {label: "Parent", name: "parent", widget: "select", options: ["tanks"], default: ["tanks"]}
       - label: "Leveling Guide"
         name: "leveling-guide"
         file: "content/jobs/tanks/paladin/leveling-guide.md"
@@ -721,6 +741,16 @@ collections:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Job Name", name: "job_name", widget: "select", options: ["dark_knight"], default: ["dark_knight"]}
+          - label: "Menu hierarchy"
+            name: "menu"
+            widget: "object"
+            fields:
+              - label: "Main"
+                name: "main"
+                widget: "object"
+                fields:
+                  - {label: "Name", name: "name", widget: "select", options: ["Dark Knight"], default: ["Dark Knight"]}
+                  - {label: "Parent", name: "parent", widget: "select", options: ["tanks"], default: ["tanks"]}
       - label: "Leveling Guide"
         name: "leveling-guide"
         file: "content/jobs/tanks/dark-knight/leveling-guide.md"
@@ -972,6 +1002,16 @@ collections:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Job Name", name: "job_name", widget: "select", options: ["gunbreaker"], default: ["gunbreaker"]}
+          - label: "Menu hierarchy"
+            name: "menu"
+            widget: "object"
+            fields:
+              - label: "Main"
+                name: "main"
+                widget: "object"
+                fields:
+                  - {label: "Name", name: "name", widget: "select", options: ["Gunbreaker"], default: ["Gunbreaker"]}
+                  - {label: "Parent", name: "parent", widget: "select", options: ["tanks"], default: ["tanks"]}
       - label: "Leveling Guide"
         name: "leveling-guide"
         file: "content/jobs/tanks/gunbreaker/leveling-guide.md"
@@ -1223,6 +1263,16 @@ collections:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Job Name", name: "job_name", widget: "select", options: ["white_mage"], default: ["white_mage"]}
+          - label: "Menu hierarchy"
+            name: "menu"
+            widget: "object"
+            fields:
+              - label: "Main"
+                name: "main"
+                widget: "object"
+                fields:
+                  - {label: "Name", name: "name", widget: "select", options: ["White Mage"], default: ["White Mage"]}
+                  - {label: "Parent", name: "parent", widget: "select", options: ["healers"], default: ["healers"]}
       - label: "Leveling Guide"
         name: "leveling-guide"
         file: "content/jobs/healers/white-mage/leveling-guide.md"
@@ -1474,6 +1524,16 @@ collections:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Job Name", name: "job_name", widget: "select", options: ["scholar"], default: ["scholar"]}
+          - label: "Menu hierarchy"
+            name: "menu"
+            widget: "object"
+            fields:
+              - label: "Main"
+                name: "main"
+                widget: "object"
+                fields:
+                  - {label: "Name", name: "name", widget: "select", options: ["Scholar"], default: ["Scholar"]}
+                  - {label: "Parent", name: "parent", widget: "select", options: ["healers"], default: ["healers"]}
       - label: "Leveling Guide"
         name: "leveling-guide"
         file: "content/jobs/healers/scholar/leveling-guide.md"
@@ -1725,6 +1785,16 @@ collections:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Job Name", name: "job_name", widget: "select", options: ["astrologian"], default: ["astrologian"]}
+          - label: "Menu hierarchy"
+            name: "menu"
+            widget: "object"
+            fields:
+              - label: "Main"
+                name: "main"
+                widget: "object"
+                fields:
+                  - {label: "Name", name: "name", widget: "select", options: ["Astrologian"], default: ["Astrologian"]}
+                  - {label: "Parent", name: "parent", widget: "select", options: ["healers"], default: ["healers"]}
       - label: "Leveling Guide"
         name: "leveling-guide"
         file: "content/jobs/healers/astrologian/leveling-guide.md"
@@ -1976,6 +2046,16 @@ collections:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Job Name", name: "job_name", widget: "select", options: ["sage"], default: ["sage"]}
+          - label: "Menu hierarchy"
+            name: "menu"
+            widget: "object"
+            fields:
+              - label: "Main"
+                name: "main"
+                widget: "object"
+                fields:
+                  - {label: "Name", name: "name", widget: "select", options: ["Sage"], default: ["Sage"]}
+                  - {label: "Parent", name: "parent", widget: "select", options: ["healers"], default: ["healers"]}
       - label: "Leveling Guide"
         name: "leveling-guide"
         file: "content/jobs/healers/sage/leveling-guide.md"
@@ -2227,6 +2307,16 @@ collections:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Job Name", name: "job_name", widget: "select", options: ["dragoon"], default: ["dragoon"]}
+          - label: "Menu hierarchy"
+            name: "menu"
+            widget: "object"
+            fields:
+              - label: "Main"
+                name: "main"
+                widget: "object"
+                fields:
+                  - {label: "Name", name: "name", widget: "select", options: ["Dragoon"], default: ["Dragoon"]}
+                  - {label: "Parent", name: "parent", widget: "select", options: ["melee"], default: ["melee"]}
       - label: "Leveling Guide"
         name: "leveling-guide"
         file: "content/jobs/melee/dragoon/leveling-guide.md"
@@ -2478,6 +2568,16 @@ collections:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Job Name", name: "job_name", widget: "select", options: ["reaper"], default: ["reaper"]}
+          - label: "Menu hierarchy"
+            name: "menu"
+            widget: "object"
+            fields:
+              - label: "Main"
+                name: "main"
+                widget: "object"
+                fields:
+                  - {label: "Name", name: "name", widget: "select", options: ["Reaper"], default: ["Reaper"]}
+                  - {label: "Parent", name: "parent", widget: "select", options: ["melee"], default: ["melee"]}
       - label: "Leveling Guide"
         name: "leveling-guide"
         file: "content/jobs/melee/reaper/leveling-guide.md"
@@ -2729,6 +2829,16 @@ collections:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Job Name", name: "job_name", widget: "select", options: ["samurai"], default: ["samurai"]}
+          - label: "Menu hierarchy"
+            name: "menu"
+            widget: "object"
+            fields:
+              - label: "Main"
+                name: "main"
+                widget: "object"
+                fields:
+                  - {label: "Name", name: "name", widget: "select", options: ["Samurai"], default: ["Samurai"]}
+                  - {label: "Parent", name: "parent", widget: "select", options: ["melee"], default: ["melee"]}
       - label: "Leveling Guide"
         name: "leveling-guide"
         file: "content/jobs/melee/samurai/leveling-guide.md"
@@ -2980,6 +3090,16 @@ collections:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Job Name", name: "job_name", widget: "select", options: ["monk"], default: ["monk"]}
+          - label: "Menu hierarchy"
+            name: "menu"
+            widget: "object"
+            fields:
+              - label: "Main"
+                name: "main"
+                widget: "object"
+                fields:
+                  - {label: "Name", name: "name", widget: "select", options: ["Monk"], default: ["Monk"]}
+                  - {label: "Parent", name: "parent", widget: "select", options: ["melee"], default: ["melee"]}
       - label: "Leveling Guide"
         name: "leveling-guide"
         file: "content/jobs/melee/monk/leveling-guide.md"
@@ -3231,6 +3351,16 @@ collections:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Job Name", name: "job_name", widget: "select", options: ["ninja"], default: ["ninja"]}
+          - label: "Menu hierarchy"
+            name: "menu"
+            widget: "object"
+            fields:
+              - label: "Main"
+                name: "main"
+                widget: "object"
+                fields:
+                  - {label: "Name", name: "name", widget: "select", options: ["Ninja"], default: ["Ninja"]}
+                  - {label: "Parent", name: "parent", widget: "select", options: ["melee"], default: ["melee"]}
       - label: "Leveling Guide"
         name: "leveling-guide"
         file: "content/jobs/melee/ninja/leveling-guide.md"
@@ -3482,6 +3612,16 @@ collections:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Job Name", name: "job_name", widget: "select", options: ["machinist"], default: ["machinist"]}
+          - label: "Menu hierarchy"
+            name: "menu"
+            widget: "object"
+            fields:
+              - label: "Main"
+                name: "main"
+                widget: "object"
+                fields:
+                  - {label: "Name", name: "name", widget: "select", options: ["Machinist"], default: ["Machinist"]}
+                  - {label: "Parent", name: "parent", widget: "select", options: ["ranged"], default: ["ranged"]}
       - label: "Leveling Guide"
         name: "leveling-guide"
         file: "content/jobs/ranged/machinist/leveling-guide.md"
@@ -3733,6 +3873,16 @@ collections:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Job Name", name: "job_name", widget: "select", options: ["dancer"], default: ["dancer"]}
+          - label: "Menu hierarchy"
+            name: "menu"
+            widget: "object"
+            fields:
+              - label: "Main"
+                name: "main"
+                widget: "object"
+                fields:
+                  - {label: "Name", name: "name", widget: "select", options: ["Dancer"], default: ["Dancer"]}
+                  - {label: "Parent", name: "parent", widget: "select", options: ["ranged"], default: ["ranged"]}
       - label: "Leveling Guide"
         name: "leveling-guide"
         file: "content/jobs/ranged/dancer/leveling-guide.md"
@@ -3984,6 +4134,16 @@ collections:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Job Name", name: "job_name", widget: "select", options: ["bard"], default: ["bard"]}
+          - label: "Menu hierarchy"
+            name: "menu"
+            widget: "object"
+            fields:
+              - label: "Main"
+                name: "main"
+                widget: "object"
+                fields:
+                  - {label: "Name", name: "name", widget: "select", options: ["Bard"], default: ["Bard"]}
+                  - {label: "Parent", name: "parent", widget: "select", options: ["ranged"], default: ["ranged"]}
       - label: "Leveling Guide"
         name: "leveling-guide"
         file: "content/jobs/ranged/bard/leveling-guide.md"
@@ -4235,6 +4395,16 @@ collections:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Job Name", name: "job_name", widget: "select", options: ["black_mage"], default: ["black_mage"]}
+          - label: "Menu hierarchy"
+            name: "menu"
+            widget: "object"
+            fields:
+              - label: "Main"
+                name: "main"
+                widget: "object"
+                fields:
+                  - {label: "Name", name: "name", widget: "select", options: ["Black Mage"], default: ["Black Mage"]}
+                  - {label: "Parent", name: "parent", widget: "select", options: ["casters"], default: ["casters"]}
       - label: "Leveling Guide"
         name: "leveling-guide"
         file: "content/jobs/casters/black-mage/leveling-guide.md"
@@ -4486,6 +4656,16 @@ collections:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Job Name", name: "job_name", widget: "select", options: ["summoner"], default: ["summoner"]}
+          - label: "Menu hierarchy"
+            name: "menu"
+            widget: "object"
+            fields:
+              - label: "Main"
+                name: "main"
+                widget: "object"
+                fields:
+                  - {label: "Name", name: "name", widget: "select", options: ["Summoner"], default: ["Summoner"]}
+                  - {label: "Parent", name: "parent", widget: "select", options: ["casters"], default: ["casters"]}
       - label: "Leveling Guide"
         name: "leveling-guide"
         file: "content/jobs/casters/summoner/leveling-guide.md"
@@ -4737,6 +4917,16 @@ collections:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Job Name", name: "job_name", widget: "select", options: ["red_mage"], default: ["red_mage"]}
+          - label: "Menu hierarchy"
+            name: "menu"
+            widget: "object"
+            fields:
+              - label: "Main"
+                name: "main"
+                widget: "object"
+                fields:
+                  - {label: "Name", name: "name", widget: "select", options: ["Red Mage"], default: ["Red Mage"]}
+                  - {label: "Parent", name: "parent", widget: "select", options: ["casters"], default: ["casters"]}
       - label: "Leveling Guide"
         name: "leveling-guide"
         file: "content/jobs/casters/red-mage/leveling-guide.md"
