Make discord name optional in user profiles

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -57,7 +57,7 @@ collections:
         name: "socials"
         widget: "object"
         fields:
-          - {label: "Discord Name", name: "discord_id", widget: "string"}
+          - {label: "Discord Name", name: "discord_id", widget: "string", required: false}
   ##
   # Role landing page
   ##
