--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -222,7 +222,7 @@ collections:
         name: "title"
         hint: This is the fight name (Ex. "E12 (Eternity)" or "O12 (Alphascape 4.0)")
         widget: "string"
-      - label: "Short Name of Fight",
+      - label: "Short Name of Fight"
         name: "fight_title"
         hint: This is the short name of the fight (Ex. "o12s" or "e12s-p2")
         widget: "string"
