--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -499,6 +499,7 @@ collections:
         fields:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Patch", name: "patch", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Last Updated", name: "lastmod", widget: "datetime", date_format: "YYYY-MM-DD", time_format: false}
           - label: "Changelog entry"
             name: "changelog"
@@ -760,6 +761,7 @@ collections:
         fields:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Patch", name: "patch", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Last Updated", name: "lastmod", widget: "datetime", date_format: "YYYY-MM-DD", time_format: false}
           - label: "Changelog entry"
             name: "changelog"
@@ -1021,6 +1023,7 @@ collections:
         fields:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Patch", name: "patch", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Last Updated", name: "lastmod", widget: "datetime", date_format: "YYYY-MM-DD", time_format: false}
           - label: "Changelog entry"
             name: "changelog"
@@ -1282,6 +1285,7 @@ collections:
         fields:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Patch", name: "patch", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Last Updated", name: "lastmod", widget: "datetime", date_format: "YYYY-MM-DD", time_format: false}
           - label: "Changelog entry"
             name: "changelog"
@@ -1543,6 +1547,7 @@ collections:
         fields:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Patch", name: "patch", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Last Updated", name: "lastmod", widget: "datetime", date_format: "YYYY-MM-DD", time_format: false}
           - label: "Changelog entry"
             name: "changelog"
@@ -1804,6 +1809,7 @@ collections:
         fields:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Patch", name: "patch", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Last Updated", name: "lastmod", widget: "datetime", date_format: "YYYY-MM-DD", time_format: false}
           - label: "Changelog entry"
             name: "changelog"
@@ -2065,6 +2071,7 @@ collections:
         fields:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Patch", name: "patch", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Last Updated", name: "lastmod", widget: "datetime", date_format: "YYYY-MM-DD", time_format: false}
           - label: "Changelog entry"
             name: "changelog"
@@ -2326,6 +2333,7 @@ collections:
         fields:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Patch", name: "patch", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Last Updated", name: "lastmod", widget: "datetime", date_format: "YYYY-MM-DD", time_format: false}
           - label: "Changelog entry"
             name: "changelog"
@@ -2587,6 +2595,7 @@ collections:
         fields:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Patch", name: "patch", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Last Updated", name: "lastmod", widget: "datetime", date_format: "YYYY-MM-DD", time_format: false}
           - label: "Changelog entry"
             name: "changelog"
@@ -2848,6 +2857,7 @@ collections:
         fields:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Patch", name: "patch", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Last Updated", name: "lastmod", widget: "datetime", date_format: "YYYY-MM-DD", time_format: false}
           - label: "Changelog entry"
             name: "changelog"
@@ -3109,6 +3119,7 @@ collections:
         fields:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Patch", name: "patch", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Last Updated", name: "lastmod", widget: "datetime", date_format: "YYYY-MM-DD", time_format: false}
           - label: "Changelog entry"
             name: "changelog"
@@ -3370,6 +3381,7 @@ collections:
         fields:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Patch", name: "patch", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Last Updated", name: "lastmod", widget: "datetime", date_format: "YYYY-MM-DD", time_format: false}
           - label: "Changelog entry"
             name: "changelog"
@@ -3631,6 +3643,7 @@ collections:
         fields:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Patch", name: "patch", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Last Updated", name: "lastmod", widget: "datetime", date_format: "YYYY-MM-DD", time_format: false}
           - label: "Changelog entry"
             name: "changelog"
@@ -3892,6 +3905,7 @@ collections:
         fields:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Patch", name: "patch", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Last Updated", name: "lastmod", widget: "datetime", date_format: "YYYY-MM-DD", time_format: false}
           - label: "Changelog entry"
             name: "changelog"
@@ -4153,6 +4167,7 @@ collections:
         fields:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Patch", name: "patch", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Last Updated", name: "lastmod", widget: "datetime", date_format: "YYYY-MM-DD", time_format: false}
           - label: "Changelog entry"
             name: "changelog"
@@ -4414,6 +4429,7 @@ collections:
         fields:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Patch", name: "patch", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Last Updated", name: "lastmod", widget: "datetime", date_format: "YYYY-MM-DD", time_format: false}
           - label: "Changelog entry"
             name: "changelog"
@@ -4675,6 +4691,7 @@ collections:
         fields:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Patch", name: "patch", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Last Updated", name: "lastmod", widget: "datetime", date_format: "YYYY-MM-DD", time_format: false}
           - label: "Changelog entry"
             name: "changelog"
@@ -4936,6 +4953,7 @@ collections:
         fields:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Patch", name: "patch", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Last Updated", name: "lastmod", widget: "datetime", date_format: "YYYY-MM-DD", time_format: false}
           - label: "Changelog entry"
             name: "changelog"
@@ -5197,6 +5215,7 @@ collections:
         fields:
           - {label: "Title", name: "title", widget: "string"}
           - {label: "Patch", name: "patch", widget: "string"}
+          - {label: "Body", name: "body", widget: "markdown"}
           - {label: "Last Updated", name: "lastmod", widget: "datetime", date_format: "YYYY-MM-DD", time_format: false}
           - label: "Changelog entry"
             name: "changelog"
