--- a/config.toml
+++ b/config.toml
@@ -20,7 +20,7 @@ enableRobotsTXT = true
   [[menu.main]]
     identifier = 'jobs'
     name = 'Combat Jobs'
-    url = '#'
+    url = '/'
     weight = 10
   # [[menu.main]]
   #   identifier = 'other-jobs'
